--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
       <div class="header-subtext">
         <h3>May 1st, 2020</h3>
       </div>
-      <img class="header-img" src="http://stage.visitcalifornia.com/sites/default/files/styles/welcome_image/public/vc_halfmoonbay_st_rf_586994572_1280x640.jpg" alt="engagement-photo" sizes="100vw"/>
+      <img class="header-img" src="img/beach.jpg" alt="engagement-photo" sizes="100vw"/>
     </div>
 
     
     <section id="details" class="bg-pink">
       <div class="row">
         <div class="col-md-6">
-          <img class="nestldown-img" src="https://res.cloudinary.com/congandmargi/image/upload/v1537766979/nestldown.png" alt="nestldown"/>
+          <img class="nestldown-img" src="img/away.jpg" alt="nestldown"/>
         </div>
         <div class="col-md-6 content">
           <h2>Details</h2>
@@ -205,6 +205,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8 mx-auto">
+		  <img src="img/flowers.jpg">
             <h2>RSVP</h2>
 Coming soon
           </div>
