--- a/index.html
+++ b/index.html
@@ -201,13 +201,13 @@
     </section>
 
     <section id="rsvp" >
-      <div class="container">
-        <div class="row">
-          <div class="col-md-8 mx-auto">
-		  <img src="img/flowers.jpg">
-            <h2>RSVP</h2>
-Coming soon
-          </div>
+      <div class="row">
+        <div class="col-md-6">
+	  <img class="nestldown-img" src="img/flowers.jpg" alt="nestldown"/>
+        </div>
+        <div class="col-md-6 content">
+          <h2>RSVP</h2>
+          <br/>
         </div>
       </div>
     </section>
