--- a/index.html
+++ b/index.html
@@ -78,12 +78,21 @@
             <div class="location">
               <h4>Location</h4>
               <h5>Oceano Hotel and Spa</h5>
-              <p class="text-center">Address</p>
+              <p class="text-center">280 Capistrano Rd, Half Moon Bay, CA 94019</p>
             </div>
             <hr/>
             <div class="schedule">
               <h4>Schedule</h4>
-              <h5>Saturday, May 1, 2020</h5>
+	      <h5>Thursday, April 30, 2020</h5>
+		<div class="row">
+                <div class="col-md-6 time">
+                  7:00pm
+                </div>
+                <div class="col-md-6 event">
+                  Welcome Dinner
+                </div>
+              </div>
+              <h5>Friday, May 1, 2020</h5>
 	      <div class="row">
                 <div class="col-md-6 time">
                   5:00pm
@@ -97,15 +106,24 @@
                   5:30pm
                 </div>
                 <div class="col-md-6 event">
-                  Cocktail hour w/ hors d'oeurves
+                  Cocktail Hour
                 </div>
               </div>
               <div class="row">
                 <div class="col-md-6 time">
-                  6:30pm
+                  6:30pm - 11:00pm
                 </div>
                 <div class="col-md-6 event">
                   Dinner & Dancing
+                </div>
+              </div>
+		<h5>Saturday, May 2, 2020</h5>
+		<div class="row">
+                <div class="col-md-6 time">
+                  12:30pm
+                </div>
+                <div class="col-md-6 event">
+                  Brunch
                 </div>
               </div>
 	    </div>
@@ -121,10 +139,10 @@
             <h2>FAQ</h2>
             <div class="q-and-a">
               <div class="question">
-                ❀ What time should I arrive at the ceremony?
+                ❀ When should I arrive?
               </div>
               <div class="answer">
-                Doors open at 3:30pm so please arrive then to ensure that there's enough time to park and walk to the ceremony site. The ceremony will begin promptly at 4:00pm.
+                The ceremony starts at 5pm on May 1st, please arrive at least 30 minutes before to allow for time to get settled. There will be a welcome event the evening of April 30th for everyone who is around. 
               </div>
             </div>
             <div class="q-and-a">
@@ -137,10 +155,10 @@
             </div>
             <div class="q-and-a">
               <div class="question">
-                ❀ Can I bring a plus one?
+                ❀ Where should I fly into?
               </div>
               <div class="answer">
-                We can only accommodate the individual(s) named on the invitation envelope. No plus ones unless clearly designated, but we can make exceptions on a case by case basis if you contact us directly.
+                San Francisco(SFO) is the most convenient to Half Moon Bay and only 19 miles away. San Jose(SJC) and Oakland(OAK) are also solid options, both around 40 miles away.
               </div>
             </div>
             <div class="q-and-a">
@@ -148,53 +166,49 @@
                 ❀ What's the dress code?
               </div>
               <div class="answer">
-                We recommend semi-formal/cocktail attire, but it is not required. Ladies - please note that part of the day's festivities is outdoors and may involve walking on lawns and hilly areas, so choose your footwear accordingly! It may also be chilly so please consider bringing warm layers and jackets.
               </div>
             </div>
             <div class="q-and-a">
               <div class="question">
-                ❀ Is there parking for the ceremony/reception?
+                ❀ Is there parking at the venue?
               </div>
               <div class="answer">
-                There is plenty of parking available on site. But we do recommend carpooling so you can safely enjoy the booze at our wedding!
+                Yes, there is ample covered and uncovered parking at the hotel.
               </div>
             </div>
             <div class="q-and-a">
               <div class="question">
-                ❀ Is Wi-Fi available?
+		 Where should I stay?
               </div>
               <div class="answer">
-                Feel free to connect to wi-fi 'nestldown' as some carriers may have poor connection at the venue.
+		Oceano is the best option, easily walkable to Thursday and Friday's events. We have a room block side aside with a group rate, just mention that you're booking for the "de Vera-Berglund Wedding".
               </div>
             </div>
             <div class="q-and-a">
               <div class="question">
-                ❀ Should I take an Uber/Lyft to the venue?
+                Are kids welcome?
               </div>
               <div class="answer">
-                Sure! Keep in mind that Uber/Lyft do not pick up from Nestldown at night. We will provide a shuttle accommodation to Los Gatos for those who Uber/Lyft.
-                Please fill out this information in the RSVP so we know in advance.
+                Yes! All ages are welcome.
               </div>
             </div>
             <div class="q-and-a">
               <div class="question">
-                ❀ Do you guys have a hotel block?
+                Do you have a registry?
               </div>
               <div class="answer">
-                As of February 2019, we do not. We are asking our guests about their accommodation plans in the RSVP form in order to ascertain the need for one. If we end up creating a hotel block, we will update our website & reach out to those who requested assistance with booking a hotel. So please RSVP sooner rather than later!
+                No, please no gifts, just come and enjoy!
               </div>
             </div>
             <div class="q-and-a">
               <div class="question">
-                ❀ Is there a registry?
+                What are your honeymoon plans?
               </div>
               <div class="answer">
-                At the moment, we both have more than enough stuff. Instead of adding to this collection, we plan on saving for a nice honeymoon later this year.
-                If you’re able, you can contribute as much or as little as you can. We'll have a box for accepting contributions at our venue. For our friends and family who have embraced technology so lovingly, here's our venmo handle (<a href="https://www.venmo.com/congchen5">@congchen5</a>) and paypal (<a href="https://www.paypal.me/congchen5">paypal.me/congchen5</a>). However, your presence at our wedding is all the gift we could ever want.
-                Additionally, we'll have a guestbook and a box for cards if you would like to leave us a note!
-              </div>
+		 We'll be taking a short trip after the wedding, and then planning for a larger trip later this year.
+	      </div>
             </div>
-            Got a question we haven’t answered? Email us at <strong>congandmargiwedding@gmail.com</strong>
+            Got a question we haven’t answered? Email us at <strong>questions@deveraberglundwedding.info</strong>
           </div>
         </div>
       </div>
