--- a/index.html
+++ b/index.html
@@ -76,24 +76,10 @@
           <br/>
           <div class="container">
             <div class="location">
-              <h4>Location</h4>
+              <h4>Wedding - Friday, May 1st, 2020</h4>
               <h5>Oceano Hotel and Spa</h5>
               <p class="text-center">280 Capistrano Rd, Half Moon Bay, CA 94019</p>
-            </div>
-            <hr/>
-            <div class="schedule">
-              <h4>Schedule</h4>
-	      <h5>Thursday, April 30, 2020</h5>
-		<div class="row">
-                <div class="col-md-6 time">
-                  7:00pm
-                </div>
-                <div class="col-md-6 event">
-                  Welcome Dinner
-                </div>
-              </div>
-              <h5>Friday, May 1, 2020</h5>
-	      <div class="row">
+	<div class="row">
                 <div class="col-md-6 time">
                   5:00pm
                 </div>
@@ -117,7 +103,22 @@
                   Dinner & Dancing
                 </div>
               </div>
+            </div>
+            <hr/>
+            <div class="schedule">
+		   <h4> Optional Events</h4>
+	      <h5>Thursday, April 30, 2020</h5>
+              <p class="text-center">280 Capistrano Rd, Half Moon Bay, CA 94019</p>
+		<div class="row">
+                <div class="col-md-6 time">
+                  7:00pm - 10:00pm
+                </div>
+                <div class="col-md-6 event">
+                  Welcome Dinner
+                </div>
+              </div>
 		<h5>Saturday, May 2, 2020</h5>
+              <p class="text-center">280 Capistrano Rd, Half Moon Bay, CA 94019</p>
 		<div class="row">
                 <div class="col-md-6 time">
                   12:30pm
@@ -139,7 +140,7 @@
             <h2>FAQ</h2>
             <div class="q-and-a">
               <div class="question">
-                ❀ When should I arrive?
+                 When should I arrive?
               </div>
               <div class="answer">
                 The ceremony starts at 5pm on May 1st, please arrive at least 30 minutes before to allow for time to get settled. There will be a welcome event the evening of April 30th for everyone who is around. 
@@ -147,7 +148,7 @@
             </div>
             <div class="q-and-a">
               <div class="question">
-                ❀ When should I RSVP by?
+                 When should I RSVP by?
               </div>
               <div class="answer">
                 Check the <a class="js-scroll-trigger" href="#rsvp">RSVP</a> section of our website! :)
@@ -155,7 +156,7 @@
             </div>
             <div class="q-and-a">
               <div class="question">
-                ❀ Where should I fly into?
+                 Where should I fly into?
               </div>
               <div class="answer">
                 San Francisco(SFO) is the most convenient to Half Moon Bay and only 19 miles away. San Jose(SJC) and Oakland(OAK) are also solid options, both around 40 miles away.
@@ -163,14 +164,15 @@
             </div>
             <div class="q-and-a">
               <div class="question">
-                ❀ What's the dress code?
+                 What's the dress code?
               </div>
               <div class="answer">
+		Semi-formal
               </div>
             </div>
             <div class="q-and-a">
               <div class="question">
-                ❀ Is there parking at the venue?
+                 Is there parking at the venue?
               </div>
               <div class="answer">
                 Yes, there is ample covered and uncovered parking at the hotel.
