Updating RSVP dates and cleaning up some phrasing.

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                  When should I RSVP by?
               </div>
               <div class="answer">
-                Check the <a class="js-scroll-trigger" href="#rsvp">RSVP</a> section of our website! :)
+                Please submit your RSVP by March 13th, and reserve a room by March 20th to use the discount. Check the <a class="js-scroll-trigger" href="#rsvp">RSVP</a> section of our website for more info! :)
               </div>
             </div>
             <div class="q-and-a">
@@ -159,7 +159,7 @@
                  Where should I fly into?
               </div>
               <div class="answer">
-                San Francisco(SFO) is the most convenient to Half Moon Bay and only 19 miles away. San Jose(SJC) and Oakland(OAK) are also solid options, both around 40 miles away.
+                San Francisco(SFO) is the most convenient airport to Half Moon Bay and only 19 miles away. San Jose(SJC) and Oakland(OAK) are also solid options, both around 40 miles away.
               </div>
             </div>
             <div class="q-and-a">
@@ -207,7 +207,7 @@
                 What are your honeymoon plans?
               </div>
               <div class="answer">
-		 We'll be taking a short trip after the wedding, and then planning for a larger trip later this year.
+		 We'll be taking a short trip after the wedding, and then planning for a larger trip later this year that is still in the works.
 	      </div>
             </div>
             Got a question we haven’t answered? Email us at <strong>questions@deveraberglundwedding.info</strong>
@@ -224,6 +224,7 @@
         <div class="col-md-6 content">
           <h2>RSVP</h2>
           <br/>
+	  Please submit this form with all the info filled out. If you have any questions or problems then reach out to questions@deveraberglundwedding.info
         </div>
       </div>
     </section>
