--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
             <div class="schedule">
 		   <h4> Optional Events</h4>
 	      <h5>Thursday, April 30, 2020</h5>
-              <p class="text-center">280 Capistrano Rd, Half Moon Bay, CA 94019</p>
+              <p class="text-center">Mezza Luna Restaurant</p>
+              <p class="text-center">459 Prospect Way, Half Moon Bay, CA 94019</p>
 		<div class="row">
                 <div class="col-md-6 time">
                   7:00pm - 10:00pm
@@ -118,7 +119,8 @@
                 </div>
               </div>
 		<h5>Saturday, May 2, 2020</h5>
-              <p class="text-center">280 Capistrano Rd, Half Moon Bay, CA 94019</p>
+	      <p class="text-center">Steins Beer Garden</p>
+              <p class="text-center">895 Villa Street, Mountain View, CA 94041</p>
 		<div class="row">
                 <div class="col-md-6 time">
                   12:30pm
@@ -167,7 +169,7 @@
                  What's the dress code?
               </div>
               <div class="answer">
-		Semi-formal
+		Semi-formal. Keep in mind that weather in Half Moon Bay in May can be highly variable, with average temperatures ranging between 44 and 60, and can be windy. The ceremony will be outdoors and on grass, with the reception inside.
               </div>
             </div>
             <div class="q-and-a">
@@ -175,7 +177,7 @@
                  Is there parking at the venue?
               </div>
               <div class="answer">
-                Yes, there is ample covered and uncovered parking at the hotel.
+                Yes, there is ample free parking at the hotel.
               </div>
             </div>
             <div class="q-and-a">
