Tweaking color and adding to gifts question

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                 Do you have a registry?
               </div>
               <div class="answer">
-                No, please no gifts, just come and enjoy!
+                No, please no gifts, we have limited space for new items, just come and enjoy!
               </div>
             </div>
             <div class="q-and-a">
