Updating with more info

--- a/index.html
+++ b/index.html
@@ -169,7 +169,9 @@
                  What's the dress code?
               </div>
               <div class="answer">
-		Semi-formal. Keep in mind that weather in Half Moon Bay in May can be highly variable, with average temperatures ranging between 44 and 60, and can be windy. The ceremony will be outdoors and on grass, with the reception inside.
+		For the wedding, Semi-formal. Keep in mind that weather in Half Moon Bay in May can be highly variable, with average temperatures ranging between 44 and 60, and can be windy. The ceremony will be outdoors and on grass, with the reception inside.
+
+		For the welcome dinner attire is business casual and will be indoors, and the next morning brunch is casual and will be on a semi-covered patio.
               </div>
             </div>
             <div class="q-and-a">
@@ -185,7 +187,7 @@
 		 Where should I stay?
               </div>
               <div class="answer">
-		Oceano is the best option, easily walkable to Thursday and Friday's events. We have a room block side aside with a group rate, just mention that you're booking for the "de Vera-Berglund Wedding".
+		Oceano is the best option, easily walkable to Thursday and Friday's events. We have a room block side aside with a group rate, just mention that you're booking for the "de Vera-Berglund Wedding". Be sure to book your room by March 20th.
               </div>
             </div>
             <div class="q-and-a">
@@ -226,7 +228,7 @@
         <div class="col-md-6 content">
           <h2>RSVP</h2>
           <br/>
-	  Please submit this form with all the info filled out. If you have any questions or problems then reach out to questions@deveraberglundwedding.info
+	  <p class="text-center">Please submit this form with all the info filled out by <b>March 13th</b>. If you have any questions or problems then reach out to questions@deveraberglundwedding.info</p>
         </div>
       </div>
     </section>
