Adding more detail

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 		 Where should I stay?
               </div>
               <div class="answer">
-		Oceano is the best option, easily walkable to Thursday and Friday's events. We have a room block side aside with a group rate, just mention that you're booking for the "de Vera-Berglund Wedding". Be sure to book your room by March 20th.
+		Oceano is the best option, easily walkable to Thursday and Friday's events. We have a room block side aside with a group rate, just mention that you're booking for the "de Vera-Berglund Wedding". Be sure to book your room by March 20th. There are other options nearby as well, contact us if you have questions.
               </div>
             </div>
             <div class="q-and-a">
