--- a/index.html
+++ b/index.html
@@ -220,17 +220,15 @@
       </div>
     </section>
 
-    <section id="rsvp" >
-      <div class="row">
-        <div class="col-md-6">
-	  <img class="nestldown-img" src="img/flowers.jpg" alt="nestldown"/>
-        </div>
-        <div class="col-md-6 content">
+    <section id="rsvp" class="bg-pink">
+	    <div class="container">
+          <div class="col-md-8 mx-auto">
           <h2>RSVP</h2>
           <br/>
 	  <p class="text-center">Please submit this form with all the info filled out by <b>March 13th</b>. If you have any questions or problems then reach out to questions@deveraberglundwedding.info</p>
-        </div>
-      </div>
+	    </div>
+	    </div>
+      <img class="nestldown-img" src="img/flowers.jpg" alt="nestldown"/>
     </section>
 
     <!-- Footer -->
