Experimenting with footer

--- a/index.html
+++ b/index.html
@@ -227,16 +227,15 @@
 	  <p class="text-center">Please submit this form with all the info filled out by <b>March 13th</b>. If you have any questions or problems then reach out to questions@deveraberglundwedding.info</p>
 	    </div>
 	    </div>
-      <img class="nestldown-img" src="img/flowers.jpg" alt="nestldown"/>
+      <img class="header-img" src="img/flowers.jpg" alt="scenery" sizes="100vw"/>
     </section>
 
-    <!-- Footer -->
-    <footer class="py-5 bg-green">
-      <div class="container">
-        <h2>See you at our wedding! ❤️</h2>
+   <div class="text-primary header" id="header">
+      <div class="header-subtext">
+        <h3>See you at our wedding! ❤️</h3>
       </div>
-      <!-- /.container -->
-    </footer>
+      <img class="header-img" src="img/beach.jpg" alt="engagement-photo" sizes="100vw"/>
+    </div>
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
