Removing duplicate footer image

--- a/index.html
+++ b/index.html
@@ -227,14 +227,13 @@
 	  <p class="text-center">Please submit this form with all the info filled out by <b>March 13th</b>. If you have any questions or problems then reach out to questions@deveraberglundwedding.info</p>
 	    </div>
 	    </div>
-      <img class="header-img" src="img/flowers.jpg" alt="scenery" sizes="100vw"/>
     </section>
 
    <div class="text-primary header" id="header">
       <div class="header-subtext">
         <h3>See you at our wedding! ❤️</h3>
       </div>
-      <img class="header-img" src="img/beach.jpg" alt="engagement-photo" sizes="100vw"/>
+      <img class="header-img" src="img/flowers.jpg" alt="engagement-photo" sizes="100vw"/>
     </div>
 
     <!-- Bootstrap core JavaScript -->
