Changing footer styling

--- a/index.html
+++ b/index.html
@@ -229,8 +229,8 @@
 	    </div>
     </section>
 
-   <div class="text-primary header" id="header">
-      <div class="header-subtext">
+   <div class="text-primary footer" id="footer">
+      <div class="footer-subtext">
         <h3>See you at our wedding! ❤️</h3>
       </div>
       <img class="header-img" src="img/flowers.jpg" alt="engagement-photo" sizes="100vw"/>
