Updating footer css

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
       <div class="footer-subtext">
         <h3>See you at our wedding! ❤️</h3>
       </div>
-      <img class="header-img" src="img/flowers.jpg" alt="engagement-photo" sizes="100vw"/>
+      <img class="footer-img" src="img/flowers.jpg" alt="engagement-photo" sizes="100vw"/>
     </div>
 
     <!-- Bootstrap core JavaScript -->
