Adding cropped image

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <section id="details" class="bg-pink">
       <div class="row">
         <div class="col-md-6">
-          <img class="nestldown-img" src="img/away.jpg" alt="nestldown"/>
+          <img class="nestldown-img" src="img/away-cropped.jpg" alt="nestldown"/>
         </div>
         <div class="col-md-6 content">
           <h2>Details</h2>
