Updating schedule layout

--- a/index.html
+++ b/index.html
@@ -107,29 +107,16 @@
               </div>
 
             <hr/>
-		   <h4> Optional Events</h4>
+	   <h4> Optional Events</h4>
 	      <h5>Thursday, April 30, 2020</h5>
-              <p class="text-center">Mezza Luna Restaurant</p>
-              <p class="text-center">459 Prospect Way, Half Moon Bay, CA 94019</p>
-		<div class="row">
-                <div class="col-md-6 time">
-                  7:00pm - 10:00pm
-                </div>
-                <div class="col-md-6 event">
-                  Welcome Dinner
-                </div>
-              </div>
-		<h5>Saturday, May 2, 2020</h5>
-	      <p class="text-center">Steins Beer Garden</p>
-              <p class="text-center">895 Villa Street, Mountain View, CA 94041</p>
-		<div class="row">
-                <div class="col-md-6 time">
-                  12:30pm
-                </div>
-                <div class="col-md-6 event">
-                  Brunch
-                </div>
-              </div>
+              <p class="text-center optional">Welcome Dinner - 7 pm</p>
+              <p class="text-center optional">Mezza Luna Restaurant</p>
+              <p class="text-center optional">459 Prospect Way, Half Moon Bay, CA 94019</p>
+              <p class="text-center optional">✥</p>
+	   <h5>Saturday, May 2, 2020</h5>
+              <p class="text-center optional" >Brunch - 12:30 pm</p>
+	      <p class="text-center optional">Steins Beer Garden</p>
+              <p class="text-center optional">895 Villa Street, Mountain View, CA 94041</p>
 	    </div>
           </div>
         </div>
