Continuing to tweak schedule formatting

--- a/index.html
+++ b/index.html
@@ -71,40 +71,17 @@
           <img class="nestldown-img" src="img/away-cropped.jpg" alt="nestldown"/>
         </div>
         <div class="col-md-6 content">
-          <h2>Details</h2>
+          <h2>Wedding Details</h2>
           <br/>
           <div class="container">
             <div class="location">
-              <h4>Wedding - Friday, May 1st, 2020</h4>
+              <h4>Friday, May 1st, 2020</h4>
+	      <h5>Ceremony - 5 pm</h5>
+	      <p class="text-center">Reception to follow</p>
               <h5>Oceano Hotel and Spa</h5>
               <p class="text-center">280 Capistrano Rd, Half Moon Bay, CA 94019</p>
-	            </div>
+	    </div>
 
-            <div class="schedule">
-<div class="row">
-                <div class="col-md-6 time">
-                  5:00pm
-                </div>
-                <div class="col-md-6 event">
-                  Ceremony
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-md-6 time">
-                  5:30pm
-                </div>
-                <div class="col-md-6 event">
-                  Cocktail Hour
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-md-6 time">
-                  6:30pm - 11:00pm
-                </div>
-                <div class="col-md-6 event">
-                  Dinner & Dancing
-                </div>
-              </div>
 
             <hr/>
 	   <h4> Optional Events</h4>
