--- a/index.html
+++ b/index.html
@@ -89,11 +89,13 @@
               <p class="text-center optional">Welcome Dinner - 7 pm</p>
               <p class="text-center optional">Mezza Luna Restaurant</p>
               <p class="text-center optional">459 Prospect Way, Half Moon Bay, CA 94019</p>
+              <p class="text-center optional">Dress code - Business casual</p>
               <p class="text-center optional">✥</p>
 	   <h5>Saturday, May 2, 2020</h5>
               <p class="text-center optional" >Brunch - 12:30 pm</p>
 	      <p class="text-center optional">Steins Beer Garden</p>
               <p class="text-center optional">895 Villa Street, Mountain View, CA 94041</p>
+              <p class="text-center optional">Dress code - Casual</p>
 	    </div>
           </div>
         </div>
@@ -136,7 +138,9 @@
               <div class="answer">
 		For the wedding, Semi-formal. Keep in mind that weather in Half Moon Bay in May can be highly variable, with average temperatures ranging between 44 and 60, and can be windy. The ceremony will be outdoors and on grass, with the reception inside.
 		<br />
-		For the welcome dinner attire is business casual and will be indoors, and the next morning brunch is casual and will be on a semi-covered patio.
+		The Thursday night welcome dinner will be indoors and business casual.
+		<br />
+		The Saturday morning brunch will be outdoors and casual.
               </div>
             </div>
             <div class="q-and-a">
@@ -152,7 +156,7 @@
 		 Where should I stay?
               </div>
               <div class="answer">
-		Oceano is the best option, easily walkable to Thursday and Friday's events. We have a room block side aside with a group rate, just mention that you're booking for the "de Vera-Berglund Wedding". Be sure to book your room by March 20th. There are other options nearby as well, contact us if you have questions.
+		Oceano is the best option, easily walkable to Thursday and Friday's events. We have a room block set aside with a group rate, just mention that you're booking for the "de Vera-Berglund Wedding". Be sure to book your room by March 20th. There are other options nearby as well, contact us if you have questions.
               </div>
             </div>
             <div class="q-and-a">
