--- a/index.html
+++ b/index.html
@@ -80,9 +80,8 @@
 	      <p class="text-center">Reception to follow</p>
               <h5>Oceano Hotel and Spa</h5>
               <p class="text-center">280 Capistrano Rd, Half Moon Bay, CA 94019</p>
+              <p class="text-center optional">Dress code - Semi-formal</p>
 	    </div>
-
-
             <hr/>
 	   <h4> Optional Events</h4>
 	      <h5>Thursday, April 30, 2020</h5>
@@ -138,7 +137,9 @@
               <div class="answer">
 		For the wedding, Semi-formal. Keep in mind that weather in Half Moon Bay in May can be highly variable, with average temperatures ranging between 44 and 60, and can be windy. The ceremony will be outdoors and on grass, with the reception inside.
 		<br />
+		<br />
 		The Thursday night welcome dinner will be indoors and business casual.
+		<br />
 		<br />
 		The Saturday morning brunch will be outdoors and casual.
               </div>
