Adding a bit more info

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <hr/>
 	   <h4> Optional Events</h4>
 	      <h5>Thursday, April 30, 2020</h5>
-              <p class="text-center optional">Welcome Dinner - 7 pm</p>
+              <p class="text-center optional">Welcome Dinner - TBA</p>
               <p class="text-center optional">Mezza Luna Restaurant</p>
               <p class="text-center optional">459 Prospect Way, Half Moon Bay, CA 94019</p>
               <p class="text-center optional">Dress code - Business casual</p>
@@ -196,6 +196,7 @@
           <h2>RSVP</h2>
           <br/>
 	  <p class="text-center">Please submit <a href="https://forms.gle/y4C1S86bBogf8XDSA">this form</a> with all the info filled out by <b>March 13th</b>. If you have any questions or problems then reach out to questions@deveraberglundwedding.info</p>
+	  <p class="text-center">Check back here for further updates closer to the wedding!</p>
 	    </div>
 	    </div>
     </section>
