Adding welcome dinner time and updating dress code

--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
             <hr/>
 	   <h4> Optional Events</h4>
 	      <h5>Thursday, April 30, 2020</h5>
-              <p class="text-center optional">Welcome Dinner - TBA</p>
+              <p class="text-center optional">Welcome Dinner - 6:00 pm</p>
               <p class="text-center optional">Mezza Luna Restaurant</p>
               <p class="text-center optional">459 Prospect Way, Half Moon Bay, CA 94019</p>
-              <p class="text-center optional">Dress code - Business casual</p>
+              <p class="text-center optional">Dress code - Cocktail attire</p>
               <p class="text-center optional">✥</p>
 	   <h5>Saturday, May 2, 2020</h5>
               <p class="text-center optional" >Brunch - 12:30 pm</p>
