Fixing welcome dinnner attire in FAQ

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 		For the wedding, Semi-formal. Keep in mind that weather in Half Moon Bay in May can be highly variable, with average temperatures ranging between 44 and 60, and can be windy. The ceremony will be outdoors and on grass, with the reception inside.
 		<br />
 		<br />
-		The Thursday night welcome dinner will be indoors and business casual.
+		The Thursday night welcome dinner will be indoors and cocktail attire.
 		<br />
 		The Saturday morning brunch will be outdoors and casual.
               </div>
